--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <header id="site_header">
+
+        <div class="header_banner">
+            <img class="logo" src="./img/logo.jpeg" alt="">
+            <h1 class="name_site">Toboolist</h1>
+        </div>
+        <!-- /.header_banner -->
+
+    </header>
+    <!-- /#site_header -->
+
+    <main id="site_main"></main>
+    <!-- /#site_main -->
+
+    <footer id="site_footer"></footer>
+    <!-- /#site_footer -->
     
 </body>
 </html>
