add first section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
     </header>
     <!-- /#site_header -->
 
-    <main id="site_main"></main>
+    <main id="site_main">
+
+        <div class="add_function">
+
+            <span class="add_task">Add Task</span>
+            <!-- /.add_task -->
+            <span class="add_section">Add Section</span>
+            <!-- /.add_section -->
+
+        </div>
+        <!-- /.add_function -->
+
+        <div class="list">
+
+            <section class="new_task">
+                <h2 class="subtitle">&#11206; New Task</h2>
+                <span class="check">&check;</span>
+                <p class="text">Quarterly Newsletter</p> 
+                <span class="editorial">Editorial</span>
+            </section>
+            <!-- /.new_task -->
+
+        </div>
+        <!-- /.list -->
+
+    </main>
     <!-- /#site_main -->
 
     <footer id="site_footer"></footer>
