add today section

--- a/index.html
+++ b/index.html
@@ -35,12 +35,51 @@
         <div class="list">
 
             <section class="new_task">
-                <h2 class="subtitle">&#11206; New Task</h2>
-                <span class="check">&check;</span>
-                <p class="text">Quarterly Newsletter</p> 
-                <span class="editorial">Editorial</span>
+
+                <span class="arrow"></span>
+                <h2 class="subtitle">New Task</h2>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Quarterly Newsletter</p> 
+                    <span class="editorial">Editorial</span>
+                </div>
+
             </section>
-            <!-- /.new_task -->
+            <!-- /.section_new_task -->
+
+            <section class="new_task">
+
+                <span class="arrow"></span>
+                <h2 class="subtitle">New Task</h2>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Recruiting blog post</p> 
+                    <span class="editorial">Editorial</span>
+                </div>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Mobile app luaunch</p> 
+                    <span class="goals">Q1 Goals</span>
+                </div>
+
+                <div class="paragraph">
+                    <span class="cross">&#10005;</span>
+                    <p class="text">Interview John H.</p> 
+                    <span class="recruiting">Recruiting</span>
+                </div>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Summit update to mobile storefronts</p> 
+                    <span class="mobile">Mobile</span>
+                </div>
+
+            </section>
+            <!-- /.section_today -->
+
 
         </div>
         <!-- /.list -->
