add upcoming section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="list">
 
-            <section class="new_task">
+            <section class="new_section">
 
                 <span class="arrow"></span>
                 <h2 class="subtitle">New Task</h2>
@@ -48,10 +48,10 @@
             </section>
             <!-- /.section_new_task -->
 
-            <section class="new_task">
+            <section class="new_section">
 
                 <span class="arrow"></span>
-                <h2 class="subtitle">New Task</h2>
+                <h2 class="subtitle">Today</h2>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
@@ -80,6 +80,36 @@
             </section>
             <!-- /.section_today -->
 
+            <section class="new_section">
+
+                <span class="arrow"></span>
+                <h2 class="subtitle">Upcoming</h2>
+
+                <div class="paragraph">
+                    <span class="cross">&#10005;</span>
+                    <p class="text">Schedule meeting with Alex</p> 
+                </div>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Homepage refresh</p> 
+                    <span class="website">Website</span>
+                </div>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Onboard new Sales team members</p> 
+                    <span class="sales">Sales</span>
+                </div>
+
+                <div class="paragraph">
+                    <span class="check">&check;</span>
+                    <p class="text">Review editorial calendar</p> 
+                    <span class="editorial">Editorial</span>
+                </div>
+
+            </section>
+            <!-- /.upcoming -->
 
         </div>
         <!-- /.list -->
