--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Quarterly Newsletter</p> 
-                    <span class="editorial">Editorial</span>
+                    <span class="post editorial">Editorial</span>
                 </div>
 
             </section>
@@ -56,25 +56,25 @@
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Recruiting blog post</p> 
-                    <span class="editorial">Editorial</span>
+                    <span class="post editorial">Editorial</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Mobile app luaunch</p> 
-                    <span class="goals">Q1 Goals</span>
+                    <span class="post goals">Q1 Goals</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="cross">&#10005;</span>
                     <p class="text">Interview John H.</p> 
-                    <span class="recruiting">Recruiting</span>
+                    <span class="post recruiting">Recruiting</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Summit update to mobile storefronts</p> 
-                    <span class="mobile">Mobile</span>
+                    <span class="post mobile">Mobile</span>
                 </div>
 
             </section>
@@ -93,19 +93,19 @@
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Homepage refresh</p> 
-                    <span class="website">Website</span>
+                    <span class="post website">Website</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Onboard new Sales team members</p> 
-                    <span class="sales">Sales</span>
+                    <span class="post sales">Sales</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
                     <p class="text">Review editorial calendar</p> 
-                    <span class="editorial">Editorial</span>
+                    <span class="post editorial">Editorial</span>
                 </div>
 
             </section>
