--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="header_banner">
             <img class="logo" src="./img/logo.jpeg" alt="">
-            <h1 class="name_site">Toboolist</h1>
+            <h1 class="ftext name_site">Toboolist</h1>
         </div>
         <!-- /.header_banner -->
 
@@ -24,9 +24,9 @@
 
         <div class="add_function">
 
-            <span class="add_task">Add Task</span>
+            <span class="ftext add_task">Add Task</span>
             <!-- /.add_task -->
-            <span class="add_section">Add Section</span>
+            <span class="ftext add_section">Add Section</span>
             <!-- /.add_section -->
 
         </div>
@@ -37,12 +37,12 @@
             <section class="new_section">
 
                 <span class="arrow"></span>
-                <h2 class="subtitle">New Task</h2>
+                <h2 class="ftext subtitle">New Task</h2>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Quarterly Newsletter</p> 
-                    <span class="post editorial">Editorial</span>
+                    <p class="text ftext">Quarterly Newsletter</p> 
+                    <span class="post editorial ftext">Editorial</span>
                 </div>
 
             </section>
@@ -51,30 +51,30 @@
             <section class="new_section">
 
                 <span class="arrow"></span>
-                <h2 class="subtitle">Today</h2>
+                <h2 class="ftext subtitle">Today</h2>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Recruiting blog post</p> 
-                    <span class="post editorial">Editorial</span>
+                    <p class="text ftext">Recruiting blog post</p> 
+                    <span class="post editorial ftext">Editorial</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Mobile app luaunch</p> 
-                    <span class="post goals">Q1 Goals</span>
+                    <p class="text ftext">Mobile app luaunch</p> 
+                    <span class="post goals ftext">Q1 Goals</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="cross">&#10005;</span>
-                    <p class="text">Interview John H.</p> 
-                    <span class="post recruiting">Recruiting</span>
+                    <p class="text ftext">Interview John H.</p> 
+                    <span class="post recruiting ftext">Recruiting</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Summit update to mobile storefronts</p> 
-                    <span class="post mobile">Mobile</span>
+                    <p class="text ftext">Summit update to mobile storefronts</p> 
+                    <span class="post mobile ftext">Mobile</span>
                 </div>
 
             </section>
@@ -83,29 +83,29 @@
             <section class="new_section">
 
                 <span class="arrow"></span>
-                <h2 class="subtitle">Upcoming</h2>
+                <h2 class="subtitle ftext">Upcoming</h2>
 
                 <div class="paragraph">
                     <span class="cross">&#10005;</span>
-                    <p class="text">Schedule meeting with Alex</p> 
+                    <p class="text ftext">Schedule meeting with Alex</p> 
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Homepage refresh</p> 
-                    <span class="post website">Website</span>
+                    <p class="text ftext">Homepage refresh</p> 
+                    <span class="post website ftext">Website</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Onboard new Sales team members</p> 
-                    <span class="post sales">Sales</span>
+                    <p class="text ftext">Onboard new Sales team members</p> 
+                    <span class="post sales ftext">Sales</span>
                 </div>
 
                 <div class="paragraph">
                     <span class="check">&check;</span>
-                    <p class="text">Review editorial calendar</p> 
-                    <span class="post editorial">Editorial</span>
+                    <p class="text ftext">Review editorial calendar</p> 
+                    <span class="post editorial ftext">Editorial</span>
                 </div>
 
             </section>
@@ -117,7 +117,9 @@
     </main>
     <!-- /#site_main -->
 
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        
+    </footer>
     <!-- /#site_footer -->
     
 </body>
